--- a/styles/about.css
+++ b/styles/about.css
@@ -42,6 +42,7 @@ body {
     list-style: none;
   }
   
+  
   .nav-item {
     margin-left: 10px;
   }
@@ -60,7 +61,7 @@ body {
     color: #fff;
   }
 
-  .navbar-vertical{
+  #navbar_vertical{
     display:none;
     flex-direction: column;
     width: 95%;
@@ -84,6 +85,26 @@ body {
     color: #fff;
   }
 
+/* Menu button styling */
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button:focus {
+  background-color: #003366;
+  outline: none;
+}
 
 /*About main section*/
 main {
@@ -178,7 +199,7 @@ main {
     width: 24px;
     height: 24px;
   }
-
+ 
 
   @media (max-width: 650px) {
     .navbar-toggler {
@@ -190,9 +211,7 @@ main {
     .navbar-nav {
       display: none;
     }
-    .navbar-vertical{
-      display:flex;
-    }
+   
     .navbar-toggler{
       display: block;
     }
@@ -206,5 +225,7 @@ main {
     .container{
       flex-direction: column;
     }
-  }
+  } 
+
+  
   
