--- a/styles/contact.css
+++ b/styles/contact.css
@@ -36,30 +36,10 @@ body {
   .navbar-toggler {
     display: none;
   }
-
-  .navbar-vertical{
-    display:none;
-    flex-direction: column;
-    width: 95%;
-  }
-  
-  .nav-linkv {
-    width: 90%;
-    margin: 5px;
-    padding: 5px;
-    text-align: center;
-    text-decoration: none;
-    /* height: 60px ; */
-    
-    border: 0.5px solid black;
-    border-radius: 5px;
-    color: black;
-  }
   
   .navbar-nav {
     display: flex;
     list-style: none;
-    ;
   }
   
   
@@ -79,6 +59,25 @@ body {
   .nav-link.active {
     background-color: #333;
     color: #fff;
+  }
+
+  #navbar_vertical{
+    display:none;
+    flex-direction: column;
+    width: 95%;
+  }
+  
+  .nav-linkv {
+    width: 90%;
+    margin: 5px;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    /* height: 60px ; */
+    
+    border: 0.5px solid black;
+    border-radius: 5px;
+    color: black;
   }
 
   .nav-linkv:hover, #active{
@@ -193,9 +192,7 @@ main {
     .navbar-nav {
       display: none;
     }
-    .navbar-vertical{
-      display:flex;
-    }
+   
     .navbar-toggler{
       display: block;
     }
@@ -209,9 +206,6 @@ main {
     .container{
       flex-direction: column;
     }
-
-    
-  }
-
-
+  } 
+  
   
