--- a/styles/login.css
+++ b/styles/login.css
@@ -83,6 +83,27 @@ nav .container {
   color: #fff;
 }
 
+/* Menu button styling */
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button:focus {
+  background-color: #003366;
+  outline: none;
+}
+
 /*Login area*/
 .login-section {
   padding: 90px 0;
@@ -194,9 +215,7 @@ nav .container {
     .navbar-nav {
       display: none;
     }
-    .navbar-vertical{
-      display:flex;
-    }
+   
     .navbar-toggler{
       display: block;
     }
@@ -215,3 +234,4 @@ nav .container {
       width: 90%;
     }
   }
+
