--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ body {
     color: #fff;
   }
 
-  .navbar-vertical{
+  #navbar_vertical{
     display:none;
     flex-direction: column;
     width: 95%;
@@ -84,6 +84,28 @@ body {
     color: #fff;
   }
   
+/* Menu button styling */
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button:focus {
+  background-color: #003366;
+  outline: none;
+}
+
+
 /* Animation keyframes */
 @keyframes slideIn {
   0% {
@@ -286,7 +308,7 @@ body {
     padding: 0 10px;
   }
   
-  /* Adjust font size for smaller screens */
+ 
   .hero h1 {
     font-size: 28px;
   }
@@ -312,19 +334,7 @@ body {
     text-align: center;
   }
   
-  /* Make the navigation bar fixed at the top */
-  /* .navbar-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-  } */
   
-  /* Adjust spacing for the rest of the content */
-  /* body {
-    padding-top: 70px;  adding padding to cover navbar
-  } */
 }
 
 @media (max-width: 600px) {
@@ -370,9 +380,7 @@ body {
   .navbar-nav {
     display: none;
   }
-  .navbar-vertical{
-    display:flex;
-  }
+ 
   .navbar-toggler{
     display: block;
   }
@@ -389,3 +397,5 @@ body {
 
   
 }
+
+
